crates/toml/tests/snapshots/invalid/key/without-value-06.stderr
TOML parse error at line 1, column 8
  |
1 | fs.fw =
  |        ^
string values must be quoted, expected literal string
